# mariadb-connector-cpp

./: CMakeLists.txt
cmake/: options_experimental.cmake
mariadbcpp_config/: CMakeLists.txt  libmariadbcpp.pc.in
